example/error/functionduplicate.m
function int func(int b)
end
function int func(int c)
end
